# sleeper

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile  README.md  THIRD-PARTY.md  Taskfile.yml  ask.py  favorite-voices.yaml  input_stack_test.py  pyproject.toml  serve_chat.py  tts_pytorch_streaming.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docker.yml
docker/: Dockerfile  entrypoint.sh
scripts/: pick_voice.py  set_voice.py
src/live_chat_scratch/: bargein_test.py  serve_chat.py
src/live_chat_scratch/models/: smart-turn-v3.2-cpu.onnx
src/sleeper/: __main__.py  ask.py  asr.py  chat.py  client.py  conversation.py  interruption.py  llm.py  messages.py  playback.py  say.py  serve_chat.py  server.py  sleeper.py  text.py  tts.py  voice_input.py
src/sleeper/models/: bargein.onnx  bargein.onnx.meta.npz
tests/: test_client.py  test_input_stack.py  test_playback.py  test_text.py  test_transport.py
