[project]
name = "live-chat-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Scott Hyndman", email = "scotty.hyndman@gmail.com" }
]
requires-python = ">=3.12,<3.13"
# Kyutai TTS (moshi) pulls sentencepiece 0.2.0, which has no cp313 wheel and
# fails to source-build; pin to 3.12 so uv always resolves a wheel.
dependencies = [
    "moshi==0.2.11",
    "torch",
    "sphn",
    "sounddevice",
    "onnxruntime>=1.27.0",
    "torchaudio==2.7.1",
    "silero-vad>=6.2.1",
    "pydantic-ai>=2.6.0",
    "nemo-toolkit[asr]>=2.6.2",
]

[project.scripts]
serve-chat = "live_chat_scratch.serve_chat:main"
ask = "live_chat_scratch.ask:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

# bargein_test.py matches pytest's *_test.py pattern but is a library module;
# scope collection to tests/ so pytest never imports the package by filename.
[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
