[project]
name = "sleeper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [{ name = "Scott Hyndman", email = "scotty.hyndman@gmail.com" }]
# Kyutai TTS (moshi) pulls sentencepiece 0.2.0, which has no cp313 wheel and
# fails to source-build; pin to 3.12 so uv always resolves a wheel.
dependencies = [
  "langfuse>=4.14.0",
  "libsh>=0.3.0",
  "moshi==0.2.11",
  "nemo-toolkit[asr]>=2.6.2",
  "onnxruntime>=1.27.0",
  "pydantic-ai>=2.6.0",
  "silero-vad>=6.2.1",
  "sounddevice",
  "sphn",
  "torch",
  "torchaudio==2.7.1",
  "websockets>=16.0",
]

[project.scripts]
say = "sleeper.say:main"
sleeper = "sleeper.__main__:main"
sleeper-client = "sleeper.client:main"

[dependency-groups]
dev = [
  "pytest>=9.1.1",
]

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[tool.basedpyright]
include = ["src", "tests"]
exclude = [".venv"]
pythonVersion = "3.12"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
executionEnvironments = [
  { root = "tests", reportAny = "none", reportArgumentType = "none", reportExplicitAny = "none", reportImplicitOverride = "none", reportMissingTypeStubs = "none", reportMissingParameterType = "none", reportMissingTypeArgument = "none", reportPrivateUsage = "none", reportUnannotatedClassAttribute = "none", reportUnnecessaryCast = "none", reportUnknownArgumentType = "none", reportUnknownLambdaType = "none", reportUnknownMemberType = "none", reportUnknownParameterType = "none", reportUnknownVariableType = "none", reportUnusedCallResult = "none", reportUnusedImport = "none", reportUnusedParameter = "none" },
  { root = "src" },
]

[tool.ruff]
line-length = 100
target-version = "py312"
indent-width = 2

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
